--- a/WebContent/WEB-INF/templates/defaultmenu.xhtml
+++ b/WebContent/WEB-INF/templates/defaultmenu.xhtml
@@ -108,9 +108,9 @@
 								<b:navLink value="Print Scoresheet for Venue" href="printscoresheetsforvenue.xhtml" rendered="#{profileBean.hasRoleList('C-REG;C-ICE;C-PRES')}"></b:navLink>
 								<b:navLink value="Bye Requests AA" href="https://forms.gle/VN2DxMT89o6XM5UD6" target="_blank" rendered="#{profileBean.hasRoleList('C-REG;C-PRES')}"></b:navLink>
 								<b:navLink value="Bye Requests A/BB/B" href="https://forms.gle/agV4y5RRbBkigLRV7" target="_blank" rendered="#{profileBean.hasRoleList('C-REG;C-PRES')}"></b:navLink>
-								<b:navLink value="Cert. Adult" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_Adult_as_of_6-14.xlsx" rendered="#{profileBean.hasRoleList('S-REG')}"></b:navLink>
-								<b:navLink value="Cert. 12 and Under" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_Age_12_and_Under_as_of 6-14.xlsx" rendered="#{profileBean.hasRoleList('S-REG')}"></b:navLink>
-								<b:navLink value="Cert. 13 to 18" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_13_to_18_as_of 6-14.xlsx" rendered="#{profileBean.hasRoleList('S-REG')}"></b:navLink>
+								<b:navLink value="Cert. Adult" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_Adult_as_of_6-14.xlsx" rendered="#{profileBean.hasRoleList('C-REG;C-PRES')}"></b:navLink>
+								<b:navLink value="Cert. 12 and Under" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_Age_12_and_Under_as_of 6-14.xlsx" rendered="#{profileBean.hasRoleList('C-REG;C-PRES')}"></b:navLink>
+								<b:navLink value="Cert. 13 to 18" icon="ui-icon-arrowthickstop-1-s" href="downloads/CAHA_certified_13_to_18_as_of 6-14.xlsx" rendered="#{profileBean.hasRoleList('C-REG;C-PRES')}"></b:navLink>
 
 							</b:navbarLinks>
 		            </b:navBar>
